# yazd

./: .gitignore  LICENSE  README.md  TODO.md  VISION.md  app.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: app-build.mjs  app-dev.mjs
src/: app.ts  index.ts  review.ts  workflows.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
test/: index.test.ts
ui/: app-model.ts  main.ts  styles.css
