[package]
name = "yazd-app"
version = "0.1.0"
description = "Minimal local-first desktop shell for Yazd"
authors = ["Nima"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.4.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
